Configurou conexão com o banco de dados postgres

--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
-DATABASE_URL=postgres://postgres:postgres@localhost:5432/fastapi_example
+# DATABASE_URL=postgres://postgres:postgres@localhost:5432/fastapi_example
+DB_USER=postgres
+DB_PASSWORD=postgres
+DB_HOST=localhost
+DB_PORT=5432
+DB_NAME=fastapi_example
